add tests for view models